--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "packageUUID": "18da3b4b-eb3c-4d08-8406-398cc952d496",
   "unpublishedPackage": {
+    "name" : "somePackage",
     "color": "#9747FF1A",
     "icon": "package"
   },
